# boolean_algebra

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  boolean_algebra_new.cbp  boolean_algebra_new.sln  boolean_algebra_new.vcxproj  boolean_algebra_new.vcxproj.filters  cmake_install.cmake
Boolean_Algebra/: Boolean_Algebra.sln
Boolean_Algebra/Boolean_Algebra/: And.cpp  And.h  Boolean_Algebra.cpp  Boolean_Algebra.vcxproj  Boolean_Algebra.vcxproj.filters  Bracket.cpp  Bracket.h  Not.cpp  Not.h  Or.cpp  Or.h  Parse_bool.cpp  Parse_bool.h  ReadMe.txt  Term_Object.cpp  Term_Object.h  Variable.cpp  Variable.h  stdafx.cpp
Modeling_boolean_algebra/: Modeling_boolean_algebra.modelproj
Modeling_boolean_algebra/ModelDefinition/: Modeling_boolean_algebra.uml
include/: And.h  Not.h  Or.h  Parse_bool.h  Term_Object.h  Variable.h  main.h
src/: And.cpp  Makefile  Not.cpp  Or.cpp  Parse_bool.cpp  Term_Object.cpp  Variable.cpp  cmake_install.cmake  main.cpp
